google tag for analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P88N5E3CCD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P88N5E3CCD');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/beaver-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
